force-app/main/default/objects/KimbleOne__ApplicationRolePermission__c/KimbleOne__ApplicationRolePermission__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Application Role Permission</label>
    <nameField>
        <label>Application Role Permission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Role Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>