force-app/main/default/objects/KimbleOne__ApplicationRolePermission__c/fields/KimbleOne__ApplicationRole__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApplicationRole__c</fullName>
    <label>Application Role</label>
    <referenceTo>KimbleOne__ApplicationRole__c</referenceTo>
    <relationshipLabel>Application Role Permissions</relationshipLabel>
    <relationshipName>ApplicationRolePermissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>