force-app/main/default/objects/KimbleOne__ApplicationRolePermission__c/fields/KimbleOne__Permission__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Permission__c</fullName>
    <label>Permission</label>
    <referenceTo>KimbleOne__Permission__c</referenceTo>
    <relationshipLabel>Application Role Permissions</relationshipLabel>
    <relationshipName>ApplicationRolePermissions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>