force-app/main/default/objects/KimbleOne__ApplicationRolePermission__c/fields/KimbleOne__ResourcePermission__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ResourcePermission__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource Permission</label>
    <referenceTo>KimbleOne__ResourcePermission__c</referenceTo>
    <relationshipLabel>Application Role Permissions</relationshipLabel>
    <relationshipName>ApplicationRolePermissions</relationshipName>
    <type>Lookup</type>
</CustomField>